--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -7,7 +7,7 @@ body {
   color: #292929;
   text-align: center;
   font-size: 18px;
-  font-family: 'Alegreya SC';
+  font-family: 'Myriad Pro';
   margin:0px; 
   width: 100%; 
   height: 100%; 
@@ -29,6 +29,10 @@ select {
   width: 100%;
   opacity: 0.8;
 }  
+
+#cocktailPage {
+  font-family: 'Alegreya SC'
+}
 
 #titleGroup {
   padding: 15px;
@@ -143,6 +147,11 @@ iframe {
   }
 }
 
+
+.animation-video {
+  width: 30%;
+}
+
 .drinkCardFloat {
   display: inline-block;
   padding: 10px;
@@ -189,9 +198,8 @@ iframe {
 }
 
 .section {
- padding: 20px;
+  padding: 20px;
 }
-
 
 .pictureContainer {
   background-color: #323232;
@@ -204,6 +212,10 @@ iframe {
   text-align: center;
   overflow: hidden;
 
+}
+
+.halfWidth {
+  max-width: 75vw;
 }
 
 .textOverlay {
@@ -221,5 +233,5 @@ iframe {
 }
 
 .wide-img {
-  width: 45%;
+  width: 35%;
 }
