--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -2,16 +2,12 @@
   max-width: 50px;
 }
 
-@import url('https://fonts.googleapis.com/css?family=Open+Sans');
-@import url('https://fonts.googleapis.com/css?family=Montserrat');
-
-
 body {
   background-color: white;
   color: #787878;
   text-align: center;
   font-size: 18px;
-  font-family: "Lato";
+  font-family: "Montserrat", sans-serif;
   margin:0px; 
   width: 100%; 
   height: 100%; 
@@ -205,7 +201,7 @@ select{
   font-style: italic;
 }
 
-@media screen and (max-width: 850px) {
+@media screen and (max-width: 1200px) {
   #cocktailMenuOptions {
     font-size: 27px;
   }
@@ -213,7 +209,7 @@ select{
     font-size: 22px;
   }
 
-  .drinkCardFloat {
+  /* .drinkCardFloat {
     padding: 3px;
     max-width: 100%;
   }
@@ -222,7 +218,7 @@ select{
   }
   .drinkPictureFloat{
     max-width: 100%;
-  }
+  } */
 
   .drinkName{
     font-size: 35px;
@@ -245,9 +241,11 @@ select{
 
 
 
-#menuBar {
-  background-color: white;
+.menuBar {
+  font-weight: 600 !important;
+  background-color: rgb(227, 227, 227);
   padding-top: 5px;
+  padding-bottom: 5px;
   /* position: fixed; */
 }
 
@@ -297,9 +295,9 @@ select{
 
 .album-cover{
   display: inline-block;
-  padding: 0 20px;
-  width: 40%;
-  max-width: 200px;
+  /* padding: 0 20px; */
+  width: 24%;
+  max-width: 350px;
 }
 
 .drawing{
@@ -319,6 +317,9 @@ select{
   }
   .drawing-wide{
     max-width: 98%;
+  }
+  .album-cover{
+    width: 48.5%;
   }
 }
 @media screen and (max-width: 600px) {
@@ -345,6 +346,7 @@ select{
 }
 .hyperlink:hover{
   color: #000000;
+  font-weight: 900;
 }
 
 .menuLink{
@@ -412,21 +414,33 @@ select{
 }
 
 
+
+.album-video-wrapper {
+  display: inline-block;
+  width: 35vw;
+  height: 30vw;
+}
+.album-video-wrapper iframe {
+  /* position: absolute; */
+  /* top: -50px; */
+  /* max-width: 1080px; */
+  width: 90%;
+  height: 100%;
+}
+
 .vimeoWrapper {
-  position: relative;
-  padding-bottom: 56.25%; /* 16:9 */
   text-align: center;
   /* margin-left: 3.5vw; */
   /* padding-top: 25px; */
-  /* height: 0; */
+  /* height: 608px; */
+  height: 52.8vw;
+  max-height: 608px;
 }
 .vimeoWrapper iframe {
-  position: absolute;
+  /* position: absolute; */
   /* top: -50px; */
-  left: 0;
-  width: 96%;
   max-width: 1080px;
+  width: 94%;
   height: 100%;
-  margin: 0; 
-  padding: 0;
+  display: inline-block;
 }
