--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -209,17 +209,6 @@ select{
     font-size: 22px;
   }
 
-  /* .drinkCardFloat {
-    padding: 3px;
-    max-width: 100%;
-  }
-  .drinkPictureRows {
-    max-width: 100%;
-  }
-  .drinkPictureFloat{
-    max-width: 100%;
-  } */
-
   .drinkName{
     font-size: 35px;
   }
@@ -239,13 +228,12 @@ select{
 }
 
 
-
-
 .menuBar {
   font-weight: 600 !important;
-  background-color: rgb(227, 227, 227);
+  background-color: rgb(0, 0, 0);
   padding-top: 5px;
   padding-bottom: 5px;
+  font-size: 20px;
   /* position: fixed; */
 }
 
@@ -276,8 +264,21 @@ select{
 }
 
 #hiq-overlay{
+  display: none;
   max-height: 90vh;
   max-width: 90vw;
+  position: fixed;
+  top: 50%;
+  left: 50%;
+  /* bring your own prefixes */
+  transform: translate(-50%, -50%);
+}
+#soundcloud-overlay{
+  display: none;
+  max-height: 90vh;
+  max-width: 90vw;
+  width: 100%;
+  height: 50vh;
   position: fixed;
   top: 50%;
   left: 50%;
@@ -294,6 +295,7 @@ select{
 }
 
 .album-cover{
+  cursor: pointer;
   display: inline-block;
   /* padding: 0 20px; */
   width: 24%;
@@ -301,10 +303,12 @@ select{
 }
 
 .drawing{
+  cursor: pointer;
   max-width: 31.5%;
   display: inline-block;
 }
 .drawing-wide{
+  cursor: pointer;
   max-width: 48%;
   display: inline-block;
 }
@@ -413,6 +417,12 @@ select{
   width: 100%;
 }
 
+
+.socialMedia {
+  font-size: 26px;
+  padding: 4px;
+  text-decoration: none;
+}
 
 
 .album-video-wrapper {
